--- a/catering-blings.html
+++ b/catering-blings.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -48,7 +46,6 @@
                 <li><a href="catering-blings.html" class="where-am-i-now">> Miniblings</a></li>
             </ul>
         </nav>
-
         <div class="carousel-container">
             <div>
                 <div class="prev nav-btn"><i class="fas fa-chevron-left"></i></div>
@@ -56,20 +53,19 @@
             </div>
             <div class="carousel">
                 <div class="carousel-image main">
-                    <img src="images/foodblings.jpg" alt="" />
+                    <img src="images/foodblings.jpg" alt="fransk landbrød kuttet i to med reker, majones, tomat, egg og salat" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodblings1.jpg" alt="" />
+                    <img src="images/foodblings1.jpg" alt="fransk landbrød kuttet i to med spekeskinke, mango og salat" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodblings2.jpg" alt="" />
+                    <img src="images/foodblings2.jpg" alt="fransk landbrød kuttet i to med røkelaks, eggerøre og salat" />
                 </div>   
                 <div class="carousel-image">
-                    <img src="images/foodblings3.jpg" alt="" />
+                    <img src="images/foodblings3.jpg" alt="fransk landbrød kuttet i to med kylling, bacon, tomat, hvitløksmajones og salat" />
                 </div>    
             </div>
-        </div>
-            
+        </div>            
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Miniblings</h1>
