--- a/catering-cake.html
+++ b/catering-cake.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -48,7 +46,6 @@
                 <li><a href="catering-blings.html" class="where-am-i-now">> Kaker</a></li>
             </ul>
         </nav>
-
         <div class="carousel-container">
             <div>
                 <div class="prev nav-btn"><i class="fas fa-chevron-left"></i></div>
@@ -56,20 +53,19 @@
             </div>
             <div class="carousel">
                 <div class="carousel-image main">
-                    <img src="images/foodcake.jpg" alt="" />
+                    <img src="images/foodcake.jpg" alt="trelags sjokoladekake med sitronkremfyll i midten og sjokoladekrem på toppen og rundt" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodcake1.jpg" alt="" />
+                    <img src="images/foodcake1.jpg" alt="cafemedarbeider viser frem sjokoladekake og kremkake" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodcake2.jpg" alt="" />
+                    <img src="images/foodcake2.jpg" alt="ostekake med kuttede jordbær på toppen" />
                 </div>   
                 <div class="carousel-image">
-                    <img src="images/foodcake3.jpg" alt="" />
+                    <img src="images/foodcake3.jpg" alt="gulrotkake med smørkrem og blåbær" />
                 </div>    
             </div>
         </div>
-
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Søtt og godt</h1>
@@ -107,8 +103,6 @@
             </div>
         </div>   
     </main>
-
-
     <footer>
         <div class="footer-container">
             <div>
@@ -142,10 +136,8 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>   
     <script src="js/hamburgerMenu.js"></script>
     <script src="js/pictureCarousel.js"></script>
-
 </body>
 </html>
