--- a/catering-christmas.html
+++ b/catering-christmas.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -50,7 +48,7 @@
         </nav>
 
         <div class="carousel-container">
-            <img src="images/foodchristmas.jpg" class="single-picure" alt="">
+            <img src="images/foodchristmas.jpg" class="single-picure" alt="tallerken med juleskinke, pepperkaker med blåmuggost, røkelaks, potetsalat etc.">
         </div>
 
         <div class="catering-spesific">
@@ -112,8 +110,6 @@
             </div>
         </div>   
     </main>
-
-
     <footer>
         <div class="footer-container">
             <div>
@@ -147,8 +143,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>    
     <script src="js/hamburgerMenu.js"></script>
 </body>
 </html>
