--- a/catering-fruit.html
+++ b/catering-fruit.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -48,7 +46,6 @@
                 <li><a href="catering-blings.html" class="where-am-i-now">> Salater, frukt, ost & spekemat</a></li>
             </ul>
         </nav>
-
         <div class="carousel-container">
             <div>
                 <div class="prev nav-btn"><i class="fas fa-chevron-left"></i></div>
@@ -56,20 +53,19 @@
             </div>
             <div class="carousel">
                 <div class="carousel-image main">
-                    <img src="images/foodfruit.jpg" alt="" />
+                    <img src="images/foodfruit.jpg" alt="spyd med spekeskinke, mango og jordbær" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodfruit1.jpg" alt="" />
+                    <img src="images/foodfruit1.jpg" alt="spagettigryte med scampi, tomat, kylling og lime" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodfruit2.jpg" alt="" />
+                    <img src="images/foodfruit2.jpg" alt="stekte parmesanchips og stekt westfalerskinke" />
                 </div>   
                 <div class="carousel-image">
-                    <img src="images/foodfruit3.jpg" alt="" />
+                    <img src="images/foodfruit3.jpg" alt="frukfat med mange sterke farger med mango, blodappelsin, jordbær, kiwi etc." />
                 </div>    
             </div>
         </div>
-
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Salater, frukt, ost & spekemat</h1>
@@ -96,8 +92,6 @@
             </div>
         </div>   
     </main>
-
-
     <footer>
         <div class="footer-container">
             <div>
@@ -131,8 +125,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>    
     <script src="js/hamburgerMenu.js"></script>
     <script src="js/pictureCarousel.js"></script>
 </body>
