--- a/catering-lystbord.html
+++ b/catering-lystbord.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -48,7 +46,6 @@
                 <li><a href="catering-blings.html" class="where-am-i-now">> Lystbord</a></li>
             </ul>
         </nav>
-
         <div class="carousel-container">
             <div>
                 <div class="prev nav-btn"><i class="fas fa-chevron-left"></i></div>
@@ -56,20 +53,19 @@
             </div>
             <div class="carousel">
                 <div class="carousel-image main">
-                    <img src="images/foodlystbord.jpg" alt="" />
+                    <img src="images/foodlystbord.jpg" alt="stor brieost med honningglaserte nøtter" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodlystbord1.jpg" alt="" />
+                    <img src="images/foodlystbord1.jpg" alt="salat med spinat, bringebær, fetaost, valnøtter" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodlystbord2.jpg" alt="" />
+                    <img src="images/foodlystbord2.jpg" alt="pastasalat med avocado, westfalerskinke, pinjekjærner, soltørkede tomat" />
                 </div>   
                 <div class="carousel-image">
-                    <img src="images/foodlystbord3.jpg" alt="" />
+                    <img src="images/foodlystbord3.jpg" alt="saltbakte poteter" />
                 </div>    
             </div>
         </div>
-
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Lystbord - Koltbord</h1>
@@ -127,8 +123,6 @@
             </div>
         </div>   
     </main>
-
-
     <footer>
         <div class="footer-container">
             <div>
@@ -162,8 +156,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>     
     <script src="js/hamburgerMenu.js"></script>
     <script src="js/pictureCarousel.js"></script>
 </body>
