--- a/catering-tapas.html
+++ b/catering-tapas.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -48,7 +46,6 @@
                 <li><a href="catering-blings.html" class="where-am-i-now">> Tapas</a></li>
             </ul>
         </nav>
-
         <div class="carousel-container">
             <div>
                 <div class="prev nav-btn"><i class="fas fa-chevron-left"></i></div>
@@ -56,20 +53,19 @@
             </div>
             <div class="carousel">
                 <div class="carousel-image main">
-                    <img src="images/foodtapas.jpg" alt="" />
+                    <img src="images/foodtapas.jpg" alt="kyllingruller med fyll" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodtapas1.jpg" alt="" />
+                    <img src="images/foodtapas1.jpg" alt="lomper rullet med brieost, spekeskinke, salat" />
                 </div>
                 <div class="carousel-image">
-                    <img src="images/foodtapas2.jpg" alt="" />
+                    <img src="images/foodtapas2.jpg" alt="stekte parmesanchips og stekte spekeskinker" />
                 </div>   
                 <div class="carousel-image">
-                    <img src="images/foodtapas3.jpg" alt="" />
+                    <img src="images/foodtapas3.jpg" alt="spyd med scampo, hvitløk og tomat" />
                 </div>    
             </div>
         </div>
-
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Figermat, små munnfuller eller tapas om du vil</h1>
@@ -112,8 +108,6 @@
             </div>
         </div>   
     </main>
-
-
     <footer>
         <div class="footer-container">
             <div>
@@ -147,8 +141,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>    
     <script src="js/hamburgerMenu.js"></script>
     <script src="js/pictureCarousel.js"></script>
 </body>
