--- a/catering-varm.html
+++ b/catering-varm.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -48,11 +46,9 @@
                 <li><a href="catering-blings.html" class="where-am-i-now">> Miniblings</a></li>
             </ul>
         </nav>
-
         <div class="carousel-container">
-            <img src="images/foodvarm.jpg" class="single-picure" alt="">
+            <img src="images/foodvarm.jpg" class="single-picure" alt="spagettigrype med scampi, kylling og tomat">
         </div>
-
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Varme retter</h1>
@@ -78,8 +74,6 @@
             </div>
         </div>   
     </main>
-
-
     <footer>
         <div class="footer-container">
             <div>
@@ -113,8 +107,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>   
     <script src="js/hamburgerMenu.js"></script>
     <script src="js/pictureCarousel.js"></script>
 </body>
