--- a/catering.html
+++ b/catering.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -52,59 +50,52 @@
             <p>Vi vil gjerne lage mat til selskap, jubileum, firmasamling, møter eller vennetreff.</p>
             <p>For at alt skal være så ferskt og godt som mulig, lager vi til maten i ”siste liten”. Vi bruker alltid friske råvarer og har fokus på at det skal være ferskt, friskt, delikat og med god smak.</p>
             <p>Maten blir servert på fine fat og skåler slik at det blir fest når en setter seg til bordet.</p>
-        </div>
-        
+        </div>      
         <div class="catering-container">
           <a href="catering-tapas.html" class="catering-container-content">
-            <img src="images/foodtapas.jpg" alt="">
+            <img src="images/foodtapas.jpg" alt="kyllingruller med fyll">
             <div>
               <h2 class="catering-button">Tapas eller fingermat</h2>
             </div>
           </a>
           <a href="catering-lystbord.html" class="catering-container-content">
-            <img src="images/foodlystbord.jpg" alt="">
+            <img src="images/foodlystbord.jpg" alt="stor brieost med honningglaserte nøtter">
             <div>
               <h2 class="catering-button">Lystbord (Koltbord)</h2>
             </div>
           </a>
           <a href="catering-blings.html" class="catering-container-content">
-            <img src="images/foodblings.jpg" alt="">
+            <img src="images/foodblings.jpg" alt="fransk landbrød kuttet i to med reker, majones, tomat, egg og salat">
             <div>
               <h2 class="catering-button">Miniblings</h2>
             </div>
           </a>
           <a href="catering-varm.html" class="catering-container-content">
-            <img src="images/foodvarm.jpg" alt="">
+            <img src="images/foodvarm.jpg" alt="spagettigrype med scampi, kylling og tomat">
             <div>
               <h2 class="catering-button">Varme retter</h2>
             </div>
           </a>
           <a href="catering-christmas.html" class="catering-container-content">
-            <img src="images/foodchristmas.jpg" alt="">
+            <img src="images/foodchristmas.jpg" alt="tallerken med juleskinke, pepperkaker med blåmuggost, røkelaks, potetsalat etc.">
             <div>
               <h2 class="catering-button">Førjulsmåltider</h2>
             </div>
           </a>
           <a href="catering-fruit.html" class="catering-container-content">
-            <img src="images/foodfruit.jpg" alt="">
+            <img src="images/foodfruit.jpg" alt="spyd med spekeskinke, mango og jordbær">
             <div>
               <h2 class="catering-button">Salat, frukt, ost & spekemat</h2>
             </div>
           </a>
           <a href="catering-cake.html" class="catering-container-content">
-            <img src="images/foodcake.jpg" alt="">
+            <img src="images/foodcake.jpg" alt="trelags sjokoladekake med sitronkremfyll i midten og sjokoladekrem på toppen og rundt">
             <div>
               <h2 class="catering-button">Hjemmelagde kaker</h2>
             </div>
           </a>
-
-
         </div>
-
-
     </main>
-
-
     <footer>
         <div class="footer-container">
           <div>
@@ -138,9 +129,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>    
     <script src="js/hamburgerMenu.js"></script>
-
 </body>
 </html>
