--- a/coffe.html
+++ b/coffe.html
@@ -38,8 +38,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -50,7 +48,7 @@
         <div class="coffe-container">
             <h1>Kaffe</h1>
             <div>
-                <img src="images/home2.jpg" alt="">
+                <img src="images/home2.jpg" alt="espressomaskin som lager to espresso">
             </div>
             <div>
                 <h2>Kaffemeny</h2>
