--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="menu.html" class="home-big-info-content">
                 <h2>Meny</h2>
                 <div>
-                    <img src="images/menu1.jpg" alt="salat med bringebær, brie, nøtter og spinat">
+                    <img src="images/menu1.jpg" alt="fransk landbrød med blåmuggost, fiken og honningglaserte nøtter">
                 </div>   
                 <div class="home-cta-container">
                     <div class="home-cta">Meny</div>
@@ -65,7 +65,7 @@
             <a href="shop.html" class="home-big-info-content">
                 <h2>Landhandel</h2>
                 <div>
-                    <img src="images/landhandel.jpg" alt="salat med bringebær, brie, nøtter og spinat">
+                    <img src="images/landhandel.jpg" alt="landhandel med ost, skinke, krydder og interiør">
                 </div>   
                 <div class="home-cta-container">
                     <div class="home-cta">Landhandel</div>
@@ -76,7 +76,7 @@
             <a href="catering.html" class="home-small-info-content">
                 <h2>Catering</h2>
                 <div>
-                    <img src="images/home8.jpg" alt="salat med bringebær, brie, nøtter og spinat">
+                    <img src="images/home8.jpg" alt="spyd med spekeskinke, melon og jordbær">
                 </div>   
                 <div class="home-cta-container">
                     <div class="home-cta">Catering</div>
@@ -85,7 +85,7 @@
             <a href="afternoontea.html" class="home-small-info-content">
                 <h2>Afternoon tea</h2>
                 <div>
-                    <img src="images/home5.jpg" alt="salat med bringebær, brie, nøtter og spinat">
+                    <img src="images/home5.jpg" alt="tre etages fat med foccacia, scones, sjokoladekake, makroner, bær, kaker, syltetøy og kaffe">
                 </div>   
                 <div class="home-cta-container">
                     <div class="home-cta">Afternoon tea</div>
@@ -94,7 +94,7 @@
             <a href="coffe.html" class="home-small-info-content">
                 <h2>Kaffe</h2>
                 <div>
-                    <img src="images/home2.jpg" alt="salat med bringebær, brie, nøtter og spinat">
+                    <img src="images/home2.jpg" alt="espressomaskin som lager to espresso">
                 </div>   
                 <div class="home-cta-container">
                     <div class="home-cta">Kaffe</div>
@@ -103,7 +103,7 @@
             <a href="about.html" class="home-small-info-content">
                 <h2>Om oss</h2>
                 <div>
-                    <img src="images/home1.jpg" alt="salat med bringebær, brie, nøtter og spinat">
+                    <img src="images/home1.jpg" alt="ansatt som tar ut ferske boller fra ovnen">
                 </div>   
                 <div class="home-cta-container">
                     <div class="home-cta">Om oss</div>
