--- a/catering-blings.html
+++ b/catering-blings.html
@@ -27,7 +27,8 @@
                 <li><a href="menu.html">Meny</a></li>
                 <li><a href="shop.html">Landhandel</a></li>
                 <li><a href="catering.html" class="where-am-i-now">Catering</a></li>
-                <li><a href="afternoontea.html">Afternoon tea</a></li>
+                <li><a href="afternoontea.html">Afternoontea</a></li>
+                <li><a href="coffe.html">Kaffe</a></li>
                 <li><a href="about.html">Om oss</a></li>
             </ul>
         </nav>
