--- a/coffe.html
+++ b/coffe.html
@@ -24,10 +24,11 @@
                 <div class="hamburger-stripes"></div>
             </button>
             <ul class="nav-ul" id="nav-ul">
-                <li><a href="menu.html" class="where-am-i-now">Meny</a></li>
+                <li><a href="menu.html">Meny</a></li>
                 <li><a href="shop.html">Landhandel</a></li>
                 <li><a href="catering.html">Catering</a></li>
-                <li><a href="afternoontea.html">Afternoon tea</a></li>
+                <li><a href="afternoontea.html">Afternoontea</a></li>
+                <li><a href="coffe.html" class="where-am-i-now">Kaffe</a></li>
                 <li><a href="about.html">Om oss</a></li>
             </ul>
         </nav>
