--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,8 @@
                 <li><a href="menu.html">Meny</a></li>
                 <li><a href="shop.html" class="where-am-i-now">Landhandel</a></li>
                 <li><a href="catering.html">Catering</a></li>
-                <li><a href="afternoontea.html">Afternoon tea</a></li>
+                <li><a href="afternoontea.html">Afternoontea</a></li>
+                <li><a href="coffe.html">Kaffe</a></li>
                 <li><a href="about.html">Om oss</a></li>
             </ul>
         </nav>
@@ -38,8 +39,6 @@
             <a href="tel:69893481"><i class="fas fa-phone-alt"></i></a>
         </div>
     </header>
-
-
     <main>
         <nav class="where-am-i-container">
             <ul>
@@ -59,8 +58,6 @@
             <p>Hvem</p>
         </div>  
     </main>
-
-
     <footer>
         <div class="footer-container">
             <div>
@@ -94,9 +91,7 @@
                 <p>Kjøkkenet stenger 30 minutter før døren lukkes. Endringer i åpningstider i høytider og helligdager - sjekk vår Facebookside.</p>
             </div>
         </div>
-    </footer> 
-    
+    </footer>  
     <script src="js/hamburgerMenu.js"></script>
-
 </body>
 </html>
