--- a/catering-christmas.html
+++ b/catering-christmas.html
@@ -55,12 +55,11 @@
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Førjulsmåltider</h1>
-                <p>Prisen er per person.</p>
                 <p>Matintoleranse? Gi oss beskjed så finner vi en løsning.</p>
             </div>
             <div class="catering-spesific-menu">
-                <h2>Julelunsjtallerken kr 295,-</h2>
-                <p>Minimum 5 personer</p>
+                <h2>Julelunsjtallerken</h2>
+                <p>Minimum 5 personer, kr 295,- per pers</p>
                 <ul>
                     <li><i class="fas fa-heart"></i>Røkelaks og lun eggerøre</li>
                     <li><i class="fas fa-heart"></i>Reker fra Engelsviken</li>
@@ -73,8 +72,8 @@
                 </ul>
             </div>
             <div class="catering-spesific-menu">
-                <h2>Tapas med julens smaker kr 395,- </h2>
-                <p>Minimum 15 personer</p>
+                <h2>Tapas med julens smaker</h2>
+                <p>Minimum 15 personer, kr 395,- per pers</p>
                 <ul>
                     <li><i class="fas fa-heart"></i>Buer lefse med rødbetesalat og lammerull</li>
                     <li><i class="fas fa-heart"></i>Pepperkake med blåmuggost fra Landhandelen</li>
@@ -88,8 +87,8 @@
                 </ul>
             </div>
             <div class="catering-spesific-menu">
-                <h2>Koltbord med julens smaker kr 355,-</h2>
-                <p>Minimum 10 personer</p>
+                <h2>Koltbord med julens smaker</h2>
+                <p>Minimum 10 personer, kr 355,- per pers</p>
                 <ul>
                     <li><i class="fas fa-heart"></i>Ovnsbakt laks med rekedressing</li>
                     <li><i class="fas fa-heart"></i>Lun eggerøre med spekemat</li>
