--- a/catering-christmas.html
+++ b/catering-christmas.html
@@ -55,6 +55,7 @@
         <div class="catering-spesific">
             <div class="catering-spesific-information">
                 <h1>Førjulsmåltider</h1>
+                <p>Kan bestilles fra og med 1.november frem til juleferien.</p>
                 <p>Matintoleranse? Gi oss beskjed så finner vi en løsning.</p>
             </div>
             <div class="catering-spesific-menu">
