--- a/catering-lystbord.html
+++ b/catering-lystbord.html
@@ -71,7 +71,7 @@
             <div class="catering-spesific-information">
                 <h1>Lystbord - Koltbord</h1>
                 <p>Det kalles av de fleste koldtbord, men vi velger oss ordet lystbord – for du spiser det du har lyst på!</p>
-                <p>Pris per person kr 315,-</p>
+                <p>Pris per person kr 325,-</p>
                 <p>Minimum 10 personer.</p>
                 <p>Matintoleranse? Gi oss beskjed så finner vi en løsning.</p>
             </div>
@@ -89,19 +89,6 @@
                 </ul>
             </div>
             <div class="catering-spesific-menu">
-                <h2>Kombinasjonslystbord</h2>
-                <ul>
-                    <li><i class="fas fa-heart"></i>Salat med westfalerskinke, pasta og avocado</li>
-                    <li><i class="fas fa-heart"></i>Ovnsbakt laks</li>
-                    <li><i class="fas fa-heart"></i>Brie med honningglaserte nøtter</li>
-                    <li><i class="fas fa-heart"></i>Smørbrødterte med reker og avokado dekorert med rogn og kruspersille</li>
-                    <li><i class="fas fa-heart"></i>Spekematfat</li>
-                    <li><i class="fas fa-heart"></i>Spagettigryte med kylling og scampi</li>
-                    <li><i class="fas fa-heart"></i>Villas lasagne</li>
-                    <li><i class="fas fa-heart"></i>Grønn salat</li>
-                </ul>
-            </div>
-            <div class="catering-spesific-menu">
                 <h2>Lystbord med nye smaker</h2>
                 <ul>
                     <li><i class="fas fa-heart"></i>Ovnsbakt laks</li>
@@ -114,6 +101,10 @@
                     <li><i class="fas fa-heart"></i>Syndig god sennepsmarinert kylling</li>
                     <li><i class="fas fa-heart"></i>Vi kan tilby godt brød om du ønsker det</li>
                 </ul>
+            </div>
+            <div class="catering-spesific-menu">
+                <h2>Brød</h2>
+                <p>Vi kan tilby godt brød eller foccacia til om du ønsker det.</p>
             </div>
             <div>
                 <h2>Kontakt oss for bestilling</h2>
