--- a/menu.html
+++ b/menu.html
@@ -53,24 +53,27 @@
                 <p>Fra vårt spiseri ordnes det salater, blingser, foccacia og mange varianter av søte godsaker som lapper, boller og kaker. </p>
                 <p>Vi endrer menyen etter årstider og råvarer.</p>
             <h3>Villas foccacia</h3>
-                <p>Foccacia med ost og skinke (A: M, HG) kr 135,-</p>
-                <p>Foccacia med westfalerskinke fra Rakkestad, smøreost og pesto (A: M, HG) kr 135,-</p>
-                <p>Foccacia med egg, westfalerskinke og avocado (A: M, HG, E) kr 135,-</p>
-                <p>Foccacia med mozzarella, tomat og fersk pesto (A: M, HG) kr 135,-</p>
+                <p>Foccacia med ost og skinke (A: M, HG) kr 149,-</p>
+                <p>Foccacia med westfalerskinke fra Rakkestad, smøreost og pesto (A: M, HG) kr 149,-</p>
+                <p>Foccacia med egg, westfalerskinke og avocado (A: M, HG, E) kr 149-</p>
+                <p>Foccacia med mozzarella, tomat og fersk pesto (A: M, HG) kr 149-</p>
             <h3>En solid blings</h3>
-                <p>Matpakkeblings med egg og salami (A: E, M, HG) kr 75,-</p>
-                <p>Matpakkeblings med ost og skinke (A: M, HG) kr 75,-</p>
-                <p>Osteblings med hvit-eller blåmuggost fra Landhandelen og honningglaserte nøtter (A : HG, M,, P, MA, C, H) kr 179,-</p>
-                <p>Reker i trengsel. Egg og håndpillede Engelsviken reker (A: M, E, S, HG) kr 179,-</p>
-                <p>Kyllingblings med avocado, bacon og hvitløksmajones (A : E, HG, R) kr 179,-</p>
-                <p>Pulled pork med mango BBQ og Gangstad salatost (A : HG, M, SE, SB, SE, SO, SL) kr 179,-</p>
+                <p>Matpakkeblings med egg og salami (A: E, M, HG) eller ost og skinke (A: M, HG) kr 85,-</p>
+                <p>Reker i trengsel. Egg og håndpillede Engelsviken reker (A: M, E, S, HG) kr 189,-</p>
+                <p>Kyllingblings med avocado, bacon og hvitløksmajones (A : E, HG, R) kr 189,-</p>
+                <p>Pulled pork med mango BBQ og Gangstad salatost (A : HG, M, SB, SE, SO, SI) kr 189,-</p>
+                <p>Sommerblings med Skagenrøre (A: HG, M, S, SU) kr 189,-</p>
+                <p>Osteblings med hvit-eller blåmuggost fra Landhandelen, TIND spekeskinke, jordbær og balsamico (A : HG, M,) kr 189,-</p>
             <h3>Salat med godt brød til</h3>
-                <p>Sommersalat med jordbær, sennepsmarinert kylling, salatost fra Gangstad Ysteri, ristede valnøtter og foccaciakrutonger (A: M, V , SE, SU, HG) kr 179,-</p>
-                <p>Salat med kylling marinert i Sweet Chilisaus fra Landhandelen vår, granateple, høvla Brimiost og foccaciakrutonger (A: HG, SU, M) kr 179,-</p>
-                <p>Salat med hvit-eller blåmuggost fra Landhandelen, honningglaserte nøtter og balsamico (A: V, M, P, MA, C, H) kr 179,-</p>
-                <p>Salat med pulled pork med mango BBQ fra Landhandelen vår, Salatost fra Gangstad Ysteri, jordbær og foccaciakrutonger (A : M, HG, SE, SB, SE, SO, SL ) kr 179,-</p>
+                <p>Sommersalat med jordbær, sennepsmarinert kylling, salatost fra Gangstad Ysteri, ristede valnøtter og foccaciakrutonger (A: M, V , SE, SU, HG) kr 189,-</p>
+                <p>Salat med Skagenrøre og reker, foccaciakrutonger og jordbær (A: M, HG, S, SU) kr 189,-</p>
+                <p>Ostesalat med hvit-eller blåmuggost fra Landhandelen, godt modna spekeskinke fra TIND, jordbær og balsamico (A: M) kr 189,-</p>
+                <p>Salat med pulled pork med mango BBQ fra Landhandelen vår, Salatost fra Gangstad Ysteri, jordbær og foccaciakrutonger (A : M, HG, SB, SE, SO, SI ) kr 189,-</p>
+                <p>Villas Veggis med epler, blomkål, mango, jordbær, honningstekte mandler, foccaciakrutonger og sennepsdressing (A: HG, MA, SE) kr 189,-</p>
             <h3>Varm suppe</h3>
-            <p>Villas kyllingsuppe (A: M) kr 155,-</p>
+                <p>Villas kyllingsuppe (A: M) kr 165,-</p>
+            <h3 class="menu-allergi">Allergi</h3>
+                <p>Vi produserer all mat i samme rom. Spor av skalldyr, nøtter og gluten kan forekomme i alle retter. Foccacia: hvetegluten. Surdeigsbrød: hvetegluten. Vi har brød uten gluten om du ønsker det. Allergener (A): hvetegluten (HG), egg (E), melk (M), skalldyr (S), sennepsfrø (SE) mandler (MA), valnøtter (V), soyabønner (SB), sesamolje (SO), selleri (SI), sulfitt (SU)</p>
         </div>
     </main>
     <footer>
