--- a/catering.html
+++ b/catering.html
@@ -71,7 +71,7 @@
               <h2 class="catering-button">Miniblings</h2>
             </div>
           </a>
-          <a href="catering-christmas.html" class="catering-container-content">
+          <!-- <a href="catering-christmas.html" class="catering-container-content">
             <img src="images/foodchristmas.jpg" alt="tallerken med juleskinke, pepperkaker med blåmuggost, røkelaks, potetsalat etc.">
             <div>
               <h2 class="catering-button">Førjulsmåltider</h2>
@@ -82,7 +82,7 @@
             <div>
               <h2 class="catering-button">Salat, frukt, ost & spekemat</h2>
             </div>
-          </a>
+          </a> -->
           <a href="catering-cake.html" class="catering-container-content">
             <img src="images/foodcake.jpg" alt="trelags sjokoladekake med sitronkremfyll i midten og sjokoladekrem på toppen og rundt">
             <div>
